--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Matching Game</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./memory_favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
